--- a/src/com/hunk/learn/web/contact/db.properties
+++ b/src/com/hunk/learn/web/contact/db.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/contact
+url=jdbc:mysql://localhost:3306/contactsys_web
 user=hunk
 password=123456
 driverClass=com.mysql.jdbc.Driver
