--- a/src/com/hunk/learn/web/eg/db.properties
+++ b/src/com/hunk/learn/web/eg/db.properties
@@ -2,3 +2,4 @@ url=jdbc:mysql://localhost:3306/day18
 user=hunk
 password=123456
 driverClass=com.mysql.jdbc.Driver
+temp=%s?user=%s&password=%s&useUnicode=true&characterEncoding=utf-8
