--- a/src/db.properties
+++ b/src/db.properties
@@ -3,3 +3,9 @@ user=hunk
 password=123456
 driverClass=com.mysql.jdbc.Driver
 temp=%s?user=%s&password=%s&useUnicode=true&characterEncoding=utf-8
+
+# mybatis
+jdbc.url=jdbc:mysql://localhost:3306/day18?useUnicode=true&amp;characterEncoding=UTF8
+jdbc.user=hunk
+jdbc.password=123456
+jdbc.driverClass=com.mysql.jdbc.Driver
