--- a/old/JavaEE/pom.xml
+++ b/old/JavaEE/pom.xml
@@ -130,11 +130,6 @@
       </dependency>
 
 
-      <dependency>
-  		<groupId>com.thoughtworks.qdox</groupId>
-  		<artifactId>qdox</artifactId>
-  		<version>1.12</version>
-  	</dependency>
   	<dependency>
         <groupId>com.thoughtworks.xstream</groupId>
         <artifactId>xstream</artifactId>
@@ -243,6 +238,12 @@
           <groupId>org.glassfish.web</groupId>
           <artifactId>javax.servlet.jsp.jstl</artifactId>
           <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
+          <scope>provided</scope>
       </dependency>
       <dependency>
           <groupId>com.thoughtworks.qdox</groupId>
