--- a/microserver/harbor/Vagrantfile
+++ b/microserver/harbor/Vagrantfile
@@ -51,7 +51,8 @@ Vagrant.configure("2") do |config|
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
   # config.vm.synced_folder "./soft", "/home/vagrant/soft"
-  config.vm.synced_folder "D:/Develop/harbor", "/home/vagrant/soft"
+  config.vm.synced_folder "./harbor", "/home/vagrant/harbor"
+  # config.vm.synced_folder "./data", "/data"
   config.vm.hostname = "harbor"
 
   # Provider-specific configuration so you can fine-tune various
@@ -77,5 +78,5 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
-  # config.vm.provision "shell", privileged: true, path: "./start.sh"
+  config.vm.provision "shell", privileged: true, path: "./start.sh"
 end
