--- a/microserver/user-edge-service/src/main/resources/application.properties
+++ b/microserver/user-edge-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ thrift.user.port=7911
 
 
 #thrift.message.ip=message-service
-thrift.message.ip=127.0.0.1
+thrift.message.ip=localhost
 thrift.message.port=9090
 
 
