--- a/microserver/vagrant/Vagrantfile
+++ b/microserver/vagrant/Vagrantfile
@@ -50,7 +50,7 @@ Vagrant.configure("2") do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
-  config.vm.synced_folder "./soft", "/home/vagrant/soft"
+  config.vm.synced_folder "./", "/home/vagrant/soft"
   config.vm.hostname = "localhost"
 
   # Provider-specific configuration so you can fine-tune various
@@ -63,7 +63,7 @@ Vagrant.configure("2") do |config|
     vb.name = "microserver"
 
     # Customize the amount of memory on the VM:
-    vb.memory = "9192"
+    vb.memory = "1024"
   end
   #
   # View the documentation for the provider you are using for more
