--- a/microserver/harbor/Vagrantfile
+++ b/microserver/harbor/Vagrantfile
@@ -52,7 +52,7 @@ Vagrant.configure("2") do |config|
   # config.vm.synced_folder "../data", "/vagrant_data"
   # config.vm.synced_folder "./soft", "/home/vagrant/soft"
   config.vm.synced_folder "./harbor", "/home/vagrant/harbor"
-  # config.vm.synced_folder "./data", "/data"
+  #config.vm.synced_folder "./data", "/data"
   config.vm.hostname = "harbor"
 
   # Provider-specific configuration so you can fine-tune various
@@ -65,7 +65,7 @@ Vagrant.configure("2") do |config|
     vb.name = "harbor"
 
     # Customize the amount of memory on the VM:
-    vb.memory = "4096"
+    vb.memory = "1024"
   end
   #
   # View the documentation for the provider you are using for more
@@ -78,5 +78,11 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
-  config.vm.provision "shell", privileged: true, path: "./start.sh"
+  
+   config.vm.provision "shell", inline: <<-SHELL
+     cd harbor
+	 sudo docker-compose up -d
+   SHELL
+  
+  #config.vm.provision "shell", privileged: true, path: "./start.sh"
 end
