--- a/microserver/vagrant/Vagrantfile
+++ b/microserver/vagrant/Vagrantfile
@@ -63,7 +63,7 @@ Vagrant.configure("2") do |config|
     vb.name = "microserver"
 
     # Customize the amount of memory on the VM:
-    vb.memory = "1024"
+    vb.memory = "2048"
   end
   #
   # View the documentation for the provider you are using for more
@@ -76,5 +76,5 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
-  config.vm.provision "shell", privileged: true, path: "./start.sh"
+  # config.vm.provision "shell", privileged: true, path: "./start.sh"
 end
