--- a/microserver/vagrant/Vagrantfile
+++ b/microserver/vagrant/Vagrantfile
@@ -76,5 +76,15 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+    # docker pull openjdk:7-jre
+    # docker tag openjdk:7-jre 192.168.33.2/micro-service/openjdk:7-jre
+    # docker pull python:2.7
+    # docker tag python:2.7 192.168.33.2/micro-service/python:2.7
+    # docker pull mesosphere/mesos-slave:1.4.1
+    # docker pull mesosphere/mesos-master:1.4.1
+    # docker pull mesosphere/marathon:v1.5.2
+    docker pull mesosphere/marathon-lb:v1.11.1
+  SHELL
   # config.vm.provision "shell", privileged: true, path: "./start.sh"
 end
