--- a/microserver/vagrant/Vagrantfile
+++ b/microserver/vagrant/Vagrantfile
@@ -63,7 +63,7 @@ Vagrant.configure("2") do |config|
     vb.name = "microserver"
 
     # Customize the amount of memory on the VM:
-    vb.memory = "2048"
+    vb.memory = "6144"
   end
   #
   # View the documentation for the provider you are using for more
@@ -76,7 +76,7 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
-  config.vm.provision "shell", inline: <<-SHELL
+  # config.vm.provision "shell", inline: <<-SHELL
     # docker pull openjdk:7-jre
     # docker tag openjdk:7-jre 192.168.33.2/micro-service/openjdk:7-jre
     # docker pull python:2.7
@@ -84,7 +84,7 @@ Vagrant.configure("2") do |config|
     # docker pull mesosphere/mesos-slave:1.4.1
     # docker pull mesosphere/mesos-master:1.4.1
     # docker pull mesosphere/marathon:v1.5.2
-    docker pull mesosphere/marathon-lb:v1.11.1
-  SHELL
-  # config.vm.provision "shell", privileged: true, path: "./start.sh"
+    # docker pull mesosphere/marathon-lb:v1.11.1
+  # SHELL
+  config.vm.provision "shell", privileged: true, path: "./start.sh"
 end
