--- a/netty/ssy/netty_lecture/build.gradle
+++ b/netty/ssy/netty_lecture/build.gradle
@@ -22,7 +22,9 @@ repositories {
 
 dependencies {
     compile (
-            'io.netty:netty-all:4.1.30.Final'
+            'io.netty:netty-all:4.1.30.Final',
+            'org.projectlombok:lombok:1.18.2',
+            'ch.qos.logback:logback-classic:1.2.3'
     )
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
