--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ old/JavaEE/javaee.iml
 .bash_history
 venv
 
+.gitignore
+apache-maven-3.6.0-bin.tar.gz
+jdk-8u191-linux-x64.tar.gz
+mysql-5.6.42-linux-glibc2.12-x86_64.tar.gz
+mysql/
