--- a/mycat2/jdk/Dockerfile
+++ b/mycat2/jdk/Dockerfile
@@ -1,35 +1,19 @@
-#FROM lwieske/java-8:jdk-8u181-slim AS build
-# FROM maven:3.6-jdk-8-alpine AS build
-FROM alpine
+FROM alpine:3.8
 MAINTAINER hunkier <huangkuier@gmail.com>
 LABEL Author="hunkier <huangkuier@gmail.com>"
 
-ADD jdk-8u191-linux-x64.tar.gz /tmp/
+COPY jdk-8u191-linux-x64.tar.gz /tmp/jdk-8u191.tar.gz
 
 RUN  sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
-     cd /tmp                                                              && \
-#    apk add --no-cache --virtual=build-dependencies ca-certificates wget && \
+     cd /tmp     && tar -zxf jdk-8u191.tar.gz -C .      && rm *.tar.gz -rf       && \
+#    apk update && apk add --no-cache --virtual=build-dependencies procps wget curl && \
     export GLIBC_VERSION="2.26-r0"                                  && \
     export JAVA_PACKAGE="jdk"                                    && \
     export JAVA_UPDATE="191"                                      && \
     export JAVA_BUILD="12"                                        && \
-    export JAVA_DOWNLOAD_PREFIX="/2787e4a523244c269598db4e85c51e0c"                     && \
-    export GLIBC_URL="https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}" && \
-    export GLIBC_APK="glibc-${GLIBC_VERSION}.apk"                        && \
-    export GLIBC_BIN_APK="glibc-bin-${GLIBC_VERSION}.apk"                && \
-    export JAVA_URL="http://download.oracle.com/otn-pub/java/jdk/8u${JAVA_UPDATE}-b${JAVA_BUILD}${JAVA_DOWNLOAD_PREFIX}/" && \
-    export JAVA_TGZ="${JAVA_PACKAGE}-8u${JAVA_UPDATE}-linux-x64.tar.gz"  && \
     export JAVA_HOME="/usr/lib/jvm/default-jvm"                          && \
-#    wget -q ${GLIBC_URL}/${GLIBC_APK}                                    && \
-#    wget -q ${GLIBC_URL}/${GLIBC_BIN_APK}                                && \
-#    apk add --no-cache --allow-untrusted ${GLIBC_APK}                    && \
-#    apk add --no-cache --allow-untrusted ${GLIBC_BIN_APK}                && \
-#    echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf && \
     mkdir -p /usr/lib/jvm                                                && \
-#    wget -qO-  --no-check-certificate --no-cookies  --header "Cookie: oraclelicense=accept-securebackup-cookie;" ${JAVA_URL}/${JAVA_TGZ} | tar -xzf -  && \
-#     wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u191-b12/2787e4a523244c269598db4e85c51e0c/jdk-8u191-linux-x64.tar.gz | tar -xzf -  && \
     if [ ${JAVA_PACKAGE} = "server-jre" ]; then mv jdk*/jre /usr/lib/jvm/java-8-oracle; else mv j* /usr/lib/jvm/java-8-oracle; fi && \
-#    mv jdk*/jre /usr/lib/jvm/java-8-oracle && \
     ln -s java-8-oracle $JAVA_HOME                                       && \
     rm -rf $JAVA_HOME/*src.zip                                           && \
     rm -rf \
@@ -104,68 +88,18 @@ RUN  sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositorie
             ${JAVA_HOME}/*/plugin \
             ${JAVA_HOME}/*.txt \
                                                                          && \
-#    apk del build-dependencies                                           && \
+    apk add -U tzdata   procps                                           && \
+    cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime                  && \
+    apk del build-dependencies                                           && \
     ln -s $JAVA_HOME/bin/* /usr/bin/                                     && \
+    echo "#!/bin/sh" >> /usr/local/bin/docker-java-home                  && \
+    echo "set -e" >>   /usr/local/bin/docker-java-home                   && \
+    echo " " >>   /usr/local/bin/docker-java-home                        && \
+    echo "dirname "$(dirname "$(readlink -f "$(which javac || which java)")")"" >>   /usr/local/bin/docker-java-home     && \
+    chmod 755 /usr/local/bin/docker-java-home                            && \
     rm -rf /tmp/*
 
-ENV JAVA_HOME=/usr/lib/jvm/default-jvm/ \
-    PATH=${PATH}:/usr/lib/jvm/default-jvm/bin
 
+ENV JAVA_HOME=$JAVA_HOME \
+    PATH=${PATH}:$JAVA_HOME/bin
 
-
-# install maven
-ARG MAVEN_VERSION=3.6.0
-ARG USER_HOME_DIR="/root"
-ARG SHA=fae9c12b570c3ba18116a4e26ea524b29f7279c17cbaadc3326ca72927368924d9131d11b9e851b8dc9162228b6fdea955446be41207a5cfc61283dd8a561d2f
-ARG BASE_URL=https://apache.osuosl.org/maven/maven-3/${MAVEN_VERSION}/binaries
-
-RUN apk add --no-cache \
-      curl procps git \
-  && rm -rf /var/lib/apt/lists/*
-COPY  apache-maven-3.6.0-bin.tar.gz /tmp/apache-maven.tar.gz
-RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
-#  && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-#  && echo "${SHA}  /tmp/apache-maven.tar.gz" | sha512sum -c - \
-  && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
-  && rm -f /tmp/apache-maven.tar.gz \
-  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-
-ENV MAVEN_HOME /usr/share/maven
-ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
-
-COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
-COPY settings-docker.xml /usr/share/maven/ref/
-
-#RUN /usr/local/bin/mvn-entrypoint.sh
-
-# compile mycat2
-WORKDIR /src
-COPY settings.xml /root/
-RUN  git clone https://github.com/MyCATApache/Mycat2.git \
-    && cd Mycat2/source \
-    && mkdir -p /root/.m2 \
-    && cp /root/settings.xml /root/.m2 \
-    && mvn package -Dmaven.test.skip=true \
-    && mv /src/Mycat2/source/target/*linux.tar.gz /src/mycat2.tar.gz
-
-# timezone
-RUN apk add -U tzdata \
-    && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-
-
-
-ENV LANG C.UTF-8
-
-# mysql
-RUN     apk add --update mysql mysql-client && rm -f /var/cache/apk/*
-COPY my.cnf /etc/mysql/my.cnf
-
-
-
-RUN  mv /src/mycat2.tar.gz /usr/local/ && cd /usr/local && tar -xzf mycat2.tar.gz
-COPY run.sh /usr/local/mycat2/
-RUN mkdir /usr/local/mycat2/logs
-RUN chmod 777 /usr/local/mycat2/run.sh
-EXPOSE 3306
-EXPOSE 8066
-ENTRYPOINT ["/usr/local/mycat2/run.sh"]
