--- a/mycat2/jdk/Dockerfile
+++ b/mycat2/jdk/Dockerfile
@@ -1,20 +1,37 @@
-FROM alpine:3.8
+FROM alpine
 MAINTAINER hunkier <huangkuier@gmail.com>
 LABEL Author="hunkier <huangkuier@gmail.com>"
 
-COPY jdk-8u191-linux-x64.tar.gz /tmp/jdk-8u191.tar.gz
 
-RUN  sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
-     cd /tmp     && tar -zxf jdk-8u191.tar.gz -C .      && rm *.tar.gz -rf       && \
-#    apk update && apk add --no-cache --virtual=build-dependencies procps wget curl && \
+ADD jdk-8u191-linux-x64.tar.gz /tmp/
+
+RUN cd /tmp                                                              && \
+    sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
+    apk add --no-cache --virtual=build-dependencies ca-certificates wget && \
     export GLIBC_VERSION="2.26-r0"                                  && \
     export JAVA_PACKAGE="jdk"                                    && \
     export JAVA_UPDATE="191"                                      && \
     export JAVA_BUILD="12"                                        && \
+    export JAVA_DOWNLOAD_PREFIX="/2787e4a523244c269598db4e85c51e0c"                     && \
+    export GLIBC_URL="https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}" && \
+    export GLIBC_APK="glibc-${GLIBC_VERSION}.apk"                        && \
+    export GLIBC_BIN_APK="glibc-bin-${GLIBC_VERSION}.apk"                && \
+    export JAVA_URL="http://download.oracle.com/otn-pub/java/jdk/8u${JAVA_UPDATE}-b${JAVA_BUILD}${JAVA_DOWNLOAD_PREFIX}/" && \
+    export JAVA_TGZ="${JAVA_PACKAGE}-8u${JAVA_UPDATE}-linux-x64.tar.gz"  && \
     export JAVA_HOME="/usr/lib/jvm/default-jvm"                          && \
-    mkdir -p /usr/lib/jvm                                                && \
-    if [ ${JAVA_PACKAGE} = "server-jre" ]; then mv jdk*/jre /usr/lib/jvm/java-8-oracle; else mv j* /usr/lib/jvm/java-8-oracle; fi && \
+    wget -q ${GLIBC_URL}/${GLIBC_APK}                                    && \
+    wget -q ${GLIBC_URL}/${GLIBC_BIN_APK}                                && \
+    apk add --no-cache --allow-untrusted ${GLIBC_APK}                    && \
+    apk add --no-cache --allow-untrusted ${GLIBC_BIN_APK}                && \
+    echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf && \
+    mkdir -p /usr/lib/jvm                                               && \
+#    wget -qO-  --no-check-certificate --no-cookies  --header "Cookie: oraclelicense=accept-securebackup-cookie;" ${JAVA_URL}/${JAVA_TGZ} | tar -xzf -  && \
+#     wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u191-b12/2787e4a523244c269598db4e85c51e0c/jdk-8u191-linux-x64.tar.gz | tar -xzf -  && \
+#    if [ ${JAVA_PACKAGE} = "server-jre" ]; then mv jdk*/jre /usr/lib/jvm/java-8-oracle; else mv j* /usr/lib/jvm/java-8-oracle; fi && \
+    mv jdk1.8.0_191 /usr/lib/jvm/java-8-oracle   && \
     ln -s java-8-oracle $JAVA_HOME                                       && \
+    ln -s $JAVA_HOME/bin/* /usr/bin/                                     && \
+	ln -s $JAVA_HOME/include/linux/jni_md.h $JAVA_HOME /jni_md.h        && \
     rm -rf $JAVA_HOME/*src.zip                                           && \
     rm -rf \
             ${JAVA_HOME}/*/javaws \
@@ -90,16 +107,16 @@ RUN  sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositorie
                                                                          && \
     apk add -U tzdata   procps                                           && \
     cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime                  && \
-    apk del build-dependencies                                           && \
-    ln -s $JAVA_HOME/bin/* /usr/bin/                                     && \
     echo "#!/bin/sh" >> /usr/local/bin/docker-java-home                  && \
     echo "set -e" >>   /usr/local/bin/docker-java-home                   && \
     echo " " >>   /usr/local/bin/docker-java-home                        && \
     echo "dirname "$(dirname "$(readlink -f "$(which javac || which java)")")"" >>   /usr/local/bin/docker-java-home     && \
     chmod 755 /usr/local/bin/docker-java-home                            && \
+    apk del build-dependencies                                           && \
     rm -rf /tmp/*
 
+ENV JAVA_HOME=/usr/lib/jvm/default-jvm \
+    PATH=${PATH}:/usr/lib/jvm/default-jvm/bin
 
-ENV JAVA_HOME=$JAVA_HOME \
-    PATH=${PATH}:$JAVA_HOME/bin
+
 
