--- a/netty/ssy/netty_lecture/build.gradle
+++ b/netty/ssy/netty_lecture/build.gradle
@@ -10,7 +10,7 @@ targetCompatibility = 1.8
 
 repositories {
 //    mavenCentral();
-    maven {
+   maven {
         name 'aliyun'
         url 'http://maven.aliyun.com/nexus/content/groups/public/'
     }
@@ -24,7 +24,10 @@ dependencies {
     compile (
             'io.netty:netty-all:4.1.30.Final',
             'org.projectlombok:lombok:1.18.2',
-            'ch.qos.logback:logback-classic:1.2.3'
+            'ch.qos.logback:logback-classic:1.2.3',
+            'com.google.protobuf:protobuf-java:3.6.1',
+            'com.google.protobuf:protobuf-java-util:3.6.1',
+
     )
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
