--- a/netty/ssy/netty_lecture/build.gradle
+++ b/netty/ssy/netty_lecture/build.gradle
@@ -27,6 +27,7 @@ dependencies {
             'ch.qos.logback:logback-classic:1.2.3',
             'com.google.protobuf:protobuf-java:3.6.1',
             'com.google.protobuf:protobuf-java-util:3.6.1',
+            'org.apache.thrift:libthrift:0.11.0',
 
     )
 
