--- a/netty/ssy/netty_lecture/build.gradle
+++ b/netty/ssy/netty_lecture/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    id 'java'
+    id "com.google.protobuf"  version "0.8.7"
+    id "java"
 }
+
 
 group 'com.hunk'
 version '1.0'
@@ -28,10 +30,49 @@ dependencies {
             'com.google.protobuf:protobuf-java:3.6.1',
             'com.google.protobuf:protobuf-java-util:3.6.1',
             'org.apache.thrift:libthrift:0.11.0',
+            'io.grpc:grpc-netty-shaded:1.16.1',
+            'io.grpc:grpc-protobuf:1.16.1',
+            'io.grpc:grpc-stub:1.16.1',
 
     )
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
 
+}
+
+
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.5.1-1"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.16.1'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
+    generatedFilesBaseDir = "$projectDir/src/"
+}
+
+
+sourceSets {
+    main {
+        proto {
+            srcDir 'src/main/proto'
+        }
+        java {
+            srcDir 'src/main/java'
+            srcDir 'src/main/grpc'
+        }
+    }
+
+    test {
+        
+    }
 }
