--- a/gradle/commonlibrary/app/build.gradle
+++ b/gradle/commonlibrary/app/build.gradle
@@ -6,8 +6,9 @@ plugins {
 group 'cn.hunkier'
 version '1.0'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+// 引用common.gradle中定义的java版本
+sourceCompatibility = rootProject.ext.java['javaVersion']
+targetCompatibility = rootProject.ext.java.javaVersion
 
 repositories {
     mavenCentral()
@@ -15,7 +16,11 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
+    // 引用子项目的扩展属性
+    testCompile this.libJunit
+    // 应用父项目的扩展属性
+    testCompile this.rootProject.libJunit
 }
 
 this.getParentProject()
@@ -23,4 +28,13 @@ this.getParentProject()
 def getParentProject(){
     def name = this.getParent().name
     println "the parent project name is : ${name}"
+}
+
+
+/**
+ * 文件复制
+ */
+copy {
+    from file('../settings.gradle')
+    into getRootProject().getBuildDir()
 }
