--- a/spring-for-all/druid-demo/src/main/resources/application.properties
+++ b/spring-for-all/druid-demo/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.max-active=5
 spring.datasource.druid.min-idle=5
-spring.datasource.druid.filters=conn,config,stat,slf4j
+spring.datasource.druid.filters=conn,config,slf4j
 
 #spring.datasource.druid.connection-properties=config.decrypt=true;config.decrypt.key=${public-key}
 #spring.datasource.druid.filter.config.enabled=true
@@ -19,3 +19,8 @@ spring.datasource.druid.filters=conn,config,stat,slf4j
 spring.datasource.druid.test-on-borrow=true
 spring.datasource.druid.test-on-return=true
 spring.datasource.druid.test-while-idle=true
+
+# slow sql
+#spring.datasource.druid.filter.stat.enabled=true
+spring.datasource.druid.filter.stat.log-slow-sql=true
+spring.datasource.druid.filter.stat.slow-sql-millis=100
