--- a/spring-for-all/transaction-propagation-demo/pom.xml
+++ b/spring-for-all/transaction-propagation-demo/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>cn.hunkier.spring.data</groupId>
-    <artifactId>druid-demo</artifactId>
+    <artifactId>transaction-propagation-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>druid-demo</name>
-    <description>Druid demo project for Spring Boot</description>
+    <name>transaction-propagation-demo</name>
+    <description>transaction propagation demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,31 +21,8 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-<!--
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
-            <exclusions>
-
-                <exclusion>
-                    <artifactId>HikariCP</artifactId>
-                    <groupId>com.zaxxer</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.18</version>
-        </dependency>
-
 
         <dependency>
             <groupId>com.h2database</groupId>
