--- a/openresty/conf/nginx.conf
+++ b/openresty/conf/nginx.conf
@@ -1,12 +1,16 @@
 worker_processes  2;
 error_log  logs/error.log  info;
+pid logs/openresty.pid;
 events {
     worker_connections  1024;
 }
 http {
     default_type  application/octet-stream;
     access_log  logs/access.log;
-    lua_package_path 'src/?.lua;;';
+#     $prefix就是启动参数中的 -p PATH；
+#     /lua/?.lua表示 lua 目录下所有以 .lua 作为后缀的文件；
+#     最后的两个分号，则代表内置的代码搜索路径。
+    lua_package_path '$prefix/src/?.lua;;';
     # lua 代码热加载，线上应该关闭该功能，影响性能
     lua_code_cache off;
     server {
