--- a/tidb/Vagrantfile
+++ b/tidb/Vagrantfile
@@ -46,7 +46,7 @@ Vagrant.configure("2") do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
-  config.vm.synced_folder "../tidb", "/home/vagrant",create: true,owner: "root", group: "root",mount_options:["dmode=775","fmode=644"] #共享目录
+  config.vm.synced_folder "../tidb", "/tidb/config" #,create: true,owner: "root", group: "root" #,mount_options:["dmode=775","fmode=644"] #共享目录
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -71,7 +71,7 @@ Vagrant.configure("2") do |config|
 
       # Customize the amount of memory on the VM:
       vb.memory = "8192"
-      vb.cpus = 2
+      vb.cpus = 4
     end
 
   # Enable provisioning with a shell script. Additional provisioners such as
