tidb data migratioin

--- a/openresty/conf/nginx.conf
+++ b/openresty/conf/nginx.conf
@@ -1,12 +1,12 @@
 worker_processes  2;
-error_log  logs/error.log  info;
-pid logs/openresty.pid;
+ error_log  logs/error.log  info;
+ pid logs/openresty.pid;
 events {
     worker_connections  1024;
 }
 http {
     default_type  application/octet-stream;
-    access_log  logs/access.log;
+     access_log  logs/access.log;
 #     $prefix就是启动参数中的 -p PATH；
 #     /lua/?.lua表示 lua 目录下所有以 .lua 作为后缀的文件；
 #     最后的两个分号，则代表内置的代码搜索路径。
@@ -17,10 +17,12 @@ http {
         listen       7777;
         server_name  localhost;
         default_type text/html;
-        location = /favicon.ico {
-            log_not_found off;
-            access_log off;
+
+        location / {
+            root /Users/hunkier/Develop/workspace/learn/openresty-best-practices/_book;
+            index  index.html index.htm;
         }
+
 
         location /test {
           content_by_lua_file src/test.lua;
